# PackageGet

./: .gitignore  Cargo.toml  README.md  REFACTOR_ROUND2.md  rustc-ice-2026-02-11T13_10_15-3298631.txt  rustc-ice-2026-02-11T13_11_15-3303987.txt
.cargo/: config.toml
.github/workflows/: package.yml
core/: Cargo.toml
core/src/: error.rs  lib.rs  pm.rs  storage.rs
core/src/pm/: apt.rs  cargo.rs  common.rs  dnf.rs  flatpak.rs  go.rs  homebrew.rs  npm.rs  pacman.rs  progress.rs  zypper.rs
ui/: Cargo.toml
ui/src/: app.rs  content.rs  icon.rs  init_workflows.rs  main.rs  sidebar.rs  status_panel.rs
ui/src/content/: errors.rs  finding.rs  installed.rs  setting.rs  shared.rs  updates.rs  workflows.rs
