#:tombi schema.strict = false
[workspace.package]
version = "0.1.0"
edition = "2024"
description = "A GUI application for checking and downloading updates."

[workspace]
resolver = "3"
members = ["ui", "core"]

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.18"
anyhow = { version = "1.0.100" }
log = "0.4.29"
env_logger = "0.11.8"
mimalloc = { version = "0.1.48"}
notify-rust = "4"


[profile.dev]
opt-level = 1
incremental = true
debug = true
split-debuginfo = "unpacked"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
incremental = false

[profile.dev.package]
updater_core = { opt-level = 1, incremental = true }
iced = { opt-level = 3}
iced_core = { opt-level = 3 }
iced_widget = { opt-level = 3 }
iced_winit = { opt-level = 3 }
winit = { opt-level = 3 }
tokio = { opt-level = 3 }
serde = { opt-level = 3 }
env_logger = { opt-level = 3 }
log = { opt-level = 3 }
mimalloc = { opt-level = 3 }
futures = { opt-level = 3 }


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.wasm-release]
# Default to release profile values.
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
